# hexstrike-ai

./: .gitignore  .huskycat.yaml  CLAUDE.md  Dockerfile  README.md  flake.nix  hexstrike_server.py  justfile
compat/: hexstrike_compat.py
dhall/: render.dhall
docs/: tool-inventory.md
fstar/: Hexstrike.Audit.fst  Hexstrike.Dispatch.fst  Hexstrike.Policy.fst  Hexstrike.Sanitize.fst  Hexstrike.Types.fst  Makefile
futhark/: network_graph.fut  pattern_match.fut  scan_analysis.fut
ocaml/: dune-project  hexstrike-mcp.opam
ocaml/lib/: audit.ml  dune  futhark_bridge.ml  futhark_ffi.ml  futhark_stubs.ml  mcp_protocol.ml  policy.ml  sanitize.ml  subprocess.ml  tool_init.ml  tool_output.ml  tool_registry.ml
ocaml/lib/fstar_extracted/: Hexstrike_Audit.ml  Hexstrike_Dispatch.ml  Hexstrike_Extern.ml  Hexstrike_Policy.ml  Hexstrike_Sanitize.ml  Hexstrike_Types.ml
ocaml/lib/tools/: analyze_target.ml  api_fuzz.ml  brute_force.ml  cloud_posture.ml  container_vuln.ml  credential_scan.ml  cve_monitor.ml  debug_tool.ml  dir_discovery.ml  disassemble.ml  dns_recon.ml  execute_command.ml  exploit_gen.ml  file_carving.ml  firmware_analyze.ml  gadget_search.ml  graphql_scan.ml  hash_crack.ml  host_discovery.ml  iac_scan.ml  jwt_analyze.ml  k8s_audit.ml  memory_forensics.ml  metadata_extract.ml  network_exec.ml  network_posture.ml  nmap_scan.ml  port_scan.ml  rpc_enum.ml  server_health.ml  smart_scan.ml  smb_enum.ml  sops_rotation.ml  sqli_test.ml  steganography.ml  subdomain_enum.ml  threat_correlate.ml  tls_check.ml  vuln_scan.ml  waf_detect.ml  (+2 more)
ocaml/test/: dune  test_main.ml
(+67 files in other folders)
